# RiffMates

./: api_auth.py  db_backup.sqlite3  db_copy.sqlite3  pyproject.toml
RiffMates/: settings.py  urls.py
bands/: admin.py  api.py  forms.py  models.py  tests.py  urls.py  views.py
bands/fixtures/: bands.json
bands/migrations/: 0001_initial.py  0002_venue_room.py  0003_band.py  0004_alter_band_options_alter_musician_options_and_more.py  0005_venue_description_venue_picture.py  0006_musician_description_musician_picture.py  0007_alter_room_unique_together.py
content/: admin.py  forms.py  models.py  urls.py  views.py
content/migrations/: 0001_initial.py
home/: api.py  tests.py  urls.py  views.py
promoters/: admin.py  api.py  apps.py  models.py  urls.py  views.py
promoters/migrations/: 0001_initial.py  0002_promoter_famous_for.py  0003_promoter_common_name_promoter_full_name.py  0004_data_fullname.py  0005_remove_promoter_first_name_remove_promoter_last_name.py  0006_promoter_birth_squashed_0007_promoter_death.py  0008_promoter_street_address_squashed_0009_promoter_city_promoter_country_and_more.py  0010_promoter_address.py  0011_promoter_full_address.py  0012_remove_promoter_city_remove_promoter_country_and_more.py  (+2 more)
static/img/: site.webmanifest  (+1 more)
templates/: band.html  bands.html  base.html  comment.html  edit_musician.html  edit_venue.html  general.html  home.html  list_ads.html  musician.html  musicians.html  news.html  news2.html  news_adv.html  promoters.html  room_editor.html  search_ads.html  search_musicians.html  seeking_ad.html  venues.html
(+14 files in other folders)
