[project]
name = "riffmates"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruairi O'Donohoe",email = "58832267+ruairiodonohoe@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djhtml (>=3.0.9,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "django-ninja (>=1.4.3,<2.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-htmx (>=1.23.2,<2.0.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-awl (>=1.9.0,<2.0.0)",
    "django-grappelli (>=4.0.2,<5.0.0)",
    "django-crispy-forms (>=2.4,<3.0)",
    "crispy-bootstrap5 (>=2025.6,<2026.0)",
    "django-waffle (>=5.0.0,<6.0.0)",
    "django-distill (>=3.2.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
